# ez1-mqtt-bridge

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: api-reference.md  architecture.md  home-assistant.md  mqtt-topics.md  troubleshooting.md
docs/_reference/: apsystems-ez1-local-api.md
src/ez1_bridge/: __init__.py  __main__.py  config.py  logging_setup.py  main.py  topics.py
src/ez1_bridge/adapters/: __init__.py  ez1_http.py  mqtt_publisher.py  prom_metrics.py
src/ez1_bridge/application/: __init__.py  command_handler.py  ha_discovery.py  poll_service.py
src/ez1_bridge/domain/: __init__.py  models.py  normalizer.py
tests/: conftest.py
tests/fixtures/api_responses/: get_alarm.json  get_device_info.json  get_max_power.json  get_on_off.json  get_output_data.json
tests/integration/: conftest.py  test_command_e2e.py  test_metrics_e2e.py  test_mqtt_broker.py  test_poll_e2e.py
tests/unit/: test_command_handler.py  test_config.py  test_ez1_http.py  test_ha_discovery.py  test_logging_setup.py  test_main.py  test_models.py  test_mqtt_publisher.py  test_normalizer.py  test_poll_service.py  test_prom_metrics.py  test_smoke.py  test_topics.py
tools/api-discovery/: README.md  findings-2026-04-27T12-06-22Z.json  methods-2026-04-27T12-15-28Z.json  probe_endpoints.py  probe_methods.py
