[project]
name = "ez1-mqtt-bridge"
version = "0.1.2"
description = "MQTT bridge for the APsystems EZ1-M micro inverter with Home Assistant discovery and Prometheus metrics"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "René Süß", email = "baronblk@gmail.com" },
]
keywords = ["mqtt", "apsystems", "ez1", "solar", "photovoltaic", "home-assistant", "iot", "prometheus"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.27,<1.0",
    "aiomqtt>=2.3,<3.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.5,<3.0",
    "structlog>=24.1,<26.0",
    "prometheus-client>=0.20,<1.0",
    "aiohttp>=3.10,<4.0",
]

[project.scripts]
ez1-bridge = "ez1_bridge.__main__:main"

[project.urls]
Homepage = "https://github.com/baronblk/ez1-mqtt-bridge"
Issues = "https://github.com/baronblk/ez1-mqtt-bridge/issues"
Changelog = "https://github.com/baronblk/ez1-mqtt-bridge/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ez1_bridge"]

[tool.hatch.build.targets.sdist]
include = ["src/ez1_bridge", "README.md", "LICENSE", "CHANGELOG.md"]

# --- Development dependencies (PEP 735) -----------------------------------
[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.7",
    "mypy>=1.13",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "pre-commit>=4.0",
    "commitizen>=3.30",
    "testcontainers>=4.5,<5.0",
]

# --- Ruff: linting + formatting ------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["docs/_reference"]

[tool.ruff.lint.pylint]
# Adapter constructors carry the wire-shape of an external service
# (host, port, credentials, topic root, device id, identifier, callbacks,
# metrics); 10 keeps that legitimate use case lint-clean without losing
# the warning on genuinely god-class constructors.
max-args = 10

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "S",    # flake8-bandit
    "A",    # flake8-builtins
    "COM",  # flake8-commas
    "T20",  # flake8-print
    "PT",   # flake8-pytest-style
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "PL",   # pylint
    "RUF",  # ruff-specific
]
ignore = [
    "COM812", # conflicts with ruff format
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",     # assert is fine in tests
    "S105",     # hardcoded password strings are fine in test fixtures
    "S106",     # hardcoded password kwargs are fine in test fixtures
    "PLR2004",  # magic values are fine in tests
    "PLR0915",  # large e2e tests legitimately accumulate many statements
    "ARG001",   # unused fixture args are fine
]
"tools/**/*.py" = [
    "T201",     # CLI scripts print to stderr by design
    "PLR2004",  # HTTP status code thresholds (200/400/500) read clearer inline
    "PLR0911",  # endpoint-classifier dispatch table is exhaustive on purpose
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# --- mypy: strict typing -------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_unused_ignores = true
enable_error_code = ["redundant-self", "explicit-override"]
files = ["src", "tests"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["aiomqtt.*"]
ignore_missing_imports = false

# testcontainers + docker SDK ship without complete typing — accept the gap
# in test code rather than vendor stubs locally.
[[tool.mypy.overrides]]
module = ["docker.*", "testcontainers.*"]
ignore_missing_imports = true

# --- pytest --------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: tests requiring mocked or embedded external services",
]

# --- coverage ------------------------------------------------------------
[tool.coverage.run]
source = ["src/ez1_bridge"]
branch = true

[tool.coverage.report]
# Overall gate per the project NFR-5: ≥85% lines for the whole package.
# A separate CI step enforces 100% on src/ez1_bridge/domain — that gate is
# tighter than this default, so it is configured per-invocation rather
# than globally to keep this default usable for ad-hoc local runs.
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = false
precision = 1

# --- bandit: security scan -----------------------------------------------
[tool.bandit]
exclude_dirs = ["tests"]

# --- commitizen: conventional-commit enforcement -------------------------
[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_provider = "pep621"
update_changelog_on_bump = false
